--- a/src/style/style.css
+++ b/src/style/style.css
@@ -164,3 +164,17 @@ body{
 .data-info ul li{
   margin: 10px 0px;
 }
+.spin{
+  animation: spinAnim 2s linear infinite;
+}
+@keyframes spinAnim {
+  0%{
+    transform: rotate(0deg);
+  }
+  50%{
+    transform: rotate(180deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
